workload/policies/01-cilium-policy-allow-fortio-to-echo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-fortio-to-echo
  namespace: benchmark
spec:
  endpointSelector:
    matchLabels:
      app: echo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: fortio
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
